# edk2

./: .editorconfig  .git-blame-ignore-revs  .git-credentials  .gitignore  .gitmodules  .mailmap  .markdownlint.yaml  .markdownlintignore  0000-cover-letter.patch  0001-CryptoPkg-Add-BigNum-support.patch  0002-CryptoPkg-Add-BigNum-NullLib.patch  0002-CryptoPkg-Add-elliptic-curve-cryptography-ECC-API-s.patch  BREAKING-CHANGES.md  BZ3430-SpecChange.md  BuildNotes.txt  BuildNotes2.txt  CI_WORKFLOW_INSTRUCTIONS.md  CODE_QUALITY_ANALYSIS.md  CONTRIBUTING.md  CodeQlFilters.yml  Contributions.txt  Edk2Setup.bat  FINAL_TEST_RESULTS.md  GetVariable.puml  Init.puml  KeyDerivation.puml  LibClass.puml  License-History.txt  License.txt  Maintainers.txt  Makefile.toml  PQC_TRANSITION_IMPLEMENTATION_SUMMARY.md  ProtectedVariableLib.puml  README.md  ReadMe.rst  Readme.md  ReleaseNotes.txt  SDHCI_FIX_SUMMARY.md  SECURITY.md  SetVariable.puml  (+37 more)
BaseTools/: .gitignore  BuildEnv  BuildNotes.txt  CMakeLists.txt  ChangeLog.txt  Contributions.txt  Edk2ToolsBuild.py  GNUmakefile  License.txt  Makefile  ReadMe.rst  ReadMe.txt  basetools_calling_path_env.yaml  basetools_path_env.yaml  building-gcc.txt  get_vsvars.bat  set_vsprefix_envs.bat  toolsetup.bat
BaseTools/BinPipWrappers/PosixLike/: BPDG  BrotliCompress  Ecc  GenDepex  GenFds  GenPatchPcdTable  GenerateCapsule  LzmaF86Compress  Rsa2048Sha256GenerateKeys  Rsa2048Sha256Sign  Trim  UPT  posix_path_env.yaml
BaseTools/BinPipWrappers/WindowsLike/: Ecc.bat  GenDepex.bat  GenerateCapsule.bat  Rsa2048Sha256GenerateKeys.bat  build.bat  win_build_tools_path_env.yaml
BaseTools/BinWrappers/: Linux-x86_64
BaseTools/BinWrappers/PosixLike/: AmlToHex  BPDG  Brotli  BrotliCompress  Ecc  FMMT  GenCrc32  GenDepex  GenFds  GenFfs  GenFv  GenPatchPcdTable  GenerateCapsule  GenericShellWrapper  GnuGenBootSector  LzmaF86Compress  Pkcs7Sign  Rsa2048Sha256GenerateKeys  Rsa2048Sha256Sign  Split  TargetTool  Trim  UPT  posix_path_env.yaml
BaseTools/BinWrappers/WindowsLike/: BPDG.bat  BrotliCompress.bat  Ecc.bat  FMMT.bat  GenDepex.bat  GenFds.bat  GenerateCapsule.bat  LzmaF86Compress.bat  PyVfrCompile.bat  Rsa2048Sha256GenerateKeys.bat  Split.bat  Trim.bat  UPT.bat  win_build_tools_path_env.yaml
BaseTools/Conf/: Empty_C_File_Host_Application_Build.c  Empty_Package_Information_Data_File.ini  FrameworkDatabase.template  ReadMe.txt  build_rule.template  diff.order  gitattributes  target.template  tools_def.template
BaseTools/Conf/XMLSchema/: DistributionPackage.xsd  FarManifest.xsd  FrameworkDataAttributes.xsd  FrameworkDataElements.xsd  FrameworkDataTypes.xsd  FrameworkHeaders.xsd  NamingConvention.xsd  SurfaceArea.xsd  SurfaceArea.xsdconfig  WorkspaceContent.xsd
BaseTools/Plugin/BuildToolsReport/: BuildToolsReportGenerator.py  BuildToolsReportGenerator_plug_in.yaml  BuildToolsReport_Template.html
BaseTools/Plugin/ClangToolChain/: ClangToolChain.py  ClangToolChain_plug_in.yaml
BaseTools/Plugin/CodeQL/: CodeQlAnalyzePlugin.py  CodeQlAnalyze_plug_in.yaml  CodeQlBuildPlugin.py  CodeQlBuild_plug_in.yaml  CodeQlQueries.qls  CodeQlVersionUpdate.py  Readme.md  codeqlcli_ext_dep.yaml  codeqlcli_linux_ext_dep.yaml  codeqlcli_windows_ext_dep.yaml
BaseTools/Plugin/DebugMacroCheck/: DebugMacroCheck.py  Readme.md
BaseTools/Plugin/HostBasedUnitTestRunner/: HostBasedUnitTestRunner.py  HostBasedUnitTestRunner_plug_in.yaml
BaseTools/Plugin/LinuxGcc5ToolChain/: LinuxGcc5ToolChain.py  LinuxGcc5ToolChain_plug_in.yaml
BaseTools/Plugin/LinuxGccToolChain/: LinuxGccToolChain.py  LinuxGccToolChain_plug_in.yaml
BaseTools/Plugin/RustEnvironmentCheck/: RustEnvironmentCheck.py  RustEnvironmentCheck_plug_in.yaml
BaseTools/Scripts/: AppendRmapManifest.py  BinToPcd.py  ClangBase.lds  ConvertFceToStructurePcd.py  ConvertMasmToNasm.py  ConvertUni.py  DetectNotUsedItem.py  FormatDosFiles.py  GccBase.lds  GccClangLinker.lds  GetMaintainer.py  GetUtcDateTime.py  LogFvSpaceInfo.py  MemoryProfileSymbolGen.py  NasmWrapper.py  PatchBinary.py  PatchCheck.py  RunMakefile.py  RunMakefileSample.mak  Rvct-Align32.sct  Rvct-Align4K.sct  SetVisualStudio.bat  SetupGit.py  ShowEnvironment.bat  SmiHandlerProfileSymbolGen.py  UpdateBuildVersions.py  efi_debugging.py  efi_gdb.py  efi_lldb.py  gcc-4K-align-ld-script  gcc-aarch64-64K-align-ld-script  gcc-aarch64-ld-script  gcc-arm-ld-script  gcc4.4-ld-script  gcc4.9-ld-script
BaseTools/Source/: BinaryFiles.txt
BaseTools/Source/C/: .gitignore  (+2 more)
BaseTools/Tests/: CToolsTests.py  CheckPythonSyntax.py  CheckUnicodeSourceFiles.py  GNUmakefile  PythonTest.py  PythonToolsTests.py  RunTests.py  TestBuildOptionsPrecedence.py  TestGenCrc32.py  TestGenFvXip.py  TestRecommendedInstance.py  TestRegularExpression.py  TestTools.py  TianoCompress.py  conftest.py
BaseTools/UserManuals/: BootSectImage_Utility_Man_Page.rtf  Build_Utility_Man_Page.rtf  EfiLdrImage_Utility_Man_Page.rtf  EfiRom_Utility_Man_Page.rtf  Fpd2Dsc_Utility_Man_Page.rtf  GenBootSector_Utility_Man_Page.rtf  GenCrc32_Utility_Man_Page.rtf  GenDepex_Utility_Man_Page.rtf  GenFds_Utility_Man_Page.rtf  GenFfs_Utility_Man_Page.rtf  GenFv_Utility_Man_Page.rtf  GenFw_Utility_Man_Page.rtf  GenPage_Utility_Man_Page.rtf  GenPatchPcdTable_Utility_Man_Page.rtf  GenSec_Utility_Man_Page.rtf  GenVtf_Utility_Man_Page.rtf  InstallPkg_Utility_Man_Page.rtf  Intel_UEFI_Packaging_Tool_Man_Page.rtf  LzmaCompress_Utility_Man_Page.rtf  MkPkg_Utility_Man_Page.rtf  Msa2Inf_Utility_Man_Page.rtf  PatchPcdValue_Utility_Man_Page.rtf  RmPkg_Utility_Man_Page.rtf  Spd2Dec_Utility_Man_Page.rtf  SplitFile_Utility_Man_Page.rtf  TargetTool_Utility_Man_Page.rtf  TianoCompress_Utility_Man_Page.rtf  Trim_Utility_Man_Page.rtf  UtilityManPage_template.rtf  VfrCompiler_Utility_Man_Page.rtf  VolInfo_Utility_Man_Page.rtf
BaseTools/cmake/: BuildVersion.h.in
BaseTools/gcc/: README.txt  mingw-gcc-build.py  tianoCross-gcc-4.1  x86_64-mingw-gcc-build
HackingGame/HackingGame/: CMakeLists.txt  HackingGame.inf  format.sh  generate_words.py  main.c  model.c  model.h  test.c  test_model.c  test_model.h  test_words.c  test_words.h  words.c  words.h
(+22952 files in other folders)
